--- a/retail_forecasting.ipynb
+++ b/retail_forecasting.ipynb
@@ -6550,7 +6550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -6593,37 +6593,37 @@
        "      <td>1.399026e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>Sarima</th>\n",
        "      <td>0.940268</td>\n",
        "      <td>31642.636476</td>\n",
        "      <td>1.969105e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>Sarimax_</th>\n",
        "      <td>1.000000</td>\n",
        "      <td>20661.509274</td>\n",
        "      <td>1.043928e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>Base FacebookProphet</th>\n",
        "      <td>1.000000</td>\n",
        "      <td>18405.559175</td>\n",
        "      <td>9.027466e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>Facebookprophet_exog</th>\n",
        "      <td>1.000000</td>\n",
        "      <td>17768.988586</td>\n",
        "      <td>8.612025e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>Tuned Fb prophet_exog</th>\n",
        "      <td>1.000000</td>\n",
        "      <td>21450.032756</td>\n",
        "      <td>1.495568e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>Tuned Fb prophet_exog_holiday</th>\n",
        "      <td>1.000000</td>\n",
        "      <td>17961.698339</td>\n",
        "      <td>8.612025e+08</td>\n",
@@ -6633,18 +6633,18 @@
        "</div>"
       ],
       "text/plain": [
-       "        models_accuracy    models_mae    models_mse\n",
-       "Arima          0.915414  25407.287636  1.574203e+09\n",
-       "Arimax         0.956446  24940.944824  1.399026e+09\n",
-       "3              0.940268  31642.636476  1.969105e+09\n",
-       "4              1.000000  20661.509274  1.043928e+09\n",
-       "5              1.000000  18405.559175  9.027466e+08\n",
-       "6              1.000000  17768.988586  8.612025e+08\n",
-       "7              1.000000  21450.032756  1.495568e+09\n",
-       "8              1.000000  17961.698339  8.612025e+08"
+       "                               models_accuracy    models_mae    models_mse\n",
+       "Arima                                 0.915414  25407.287636  1.574203e+09\n",
+       "Arimax                                0.956446  24940.944824  1.399026e+09\n",
+       "Sarima                                0.940268  31642.636476  1.969105e+09\n",
+       "Sarimax_                              1.000000  20661.509274  1.043928e+09\n",
+       "Base FacebookProphet                  1.000000  18405.559175  9.027466e+08\n",
+       "Facebookprophet_exog                  1.000000  17768.988586  8.612025e+08\n",
+       "Tuned Fb prophet_exog                 1.000000  21450.032756  1.495568e+09\n",
+       "Tuned Fb prophet_exog_holiday         1.000000  17961.698339  8.612025e+08"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6655,17 +6655,17 @@
     "models_accuracy=[model1_accuracy,model2_accuracy,model3_accuracy,model4_accuracy,model5_accuracy,model6_accuracy,model7_accuracy,model8_accuracy]\n",
     "\n",
     "eval_data={'models_accuracy':models_accuracy,'models_mae':models_mae,'models_mse':models_mse}\n",
-    "eval_dta=pd.DataFrame(eval_data,index=['Arima','Arimax','3','4','5','6','7','8'])\n",
+    "eval_dta=pd.DataFrame(eval_data,index=['Arima','Arimax','Sarima ','Sarimax_','Base FacebookProphet','Facebookprophet_exog','Tuned Fb prophet_exog ','Tuned Fb prophet_exog_holiday'])\n",
     "eval_dta"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "##"
+    "Based on the models accuracy we will use the Facebookprophet exogenous model which is model6. \n",
+    " We will use the model to predict results for the last quarter Q3-Q4 for 2020 for all products"
    ]
   },
   {
@@ -6681,7 +6681,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Based on the analysis we see that:\n",
+    "* SKU1,SKU3 has the highest sales every year\n",
+    "* SKU2 had lowest sales every year\n",
+    "* \n",
+    "We picked the facebook prophet model with exogenous variables i.e model_tune \n",
+    "The model demostrated a good forecast accuracy of 1 which means that it is almost close to perfect with the least mean absolute error\n",
+    "\n",
+    "The major limitation was working with limited data for different products each being modelled separately.The other limitation is just trying out more models\n",
+    "\n",
+    "Based on our findings, we recommend that the company use the facebook prophet model(model_tune) to inform their decision-making around inventory management and production planning, and to continue to refine and improve the model over time"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Next steps"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* To use deep learning models that is RNNs and LSTMs to train the data for better accuracy\n",
+    "* To scale the facebook prophet model to be able to handle big data\n",
+    "* To do more analysis on the data "
    ]
   },
   {
